tests/fixtures/components/invalid-foldable/errors.blade.php
@blaze

<div class="{{ $errors->has('name') ? 'error' : '' }}">
    {{ $slot }}
</div>
